feat: new java version support